--- a/section2/js-web-project/package.json
+++ b/section2/js-web-project/package.json
@@ -1,6 +1,7 @@
 {
     "name": "javascript-refresher-start",
     "version": "1.0.0",
+    "type": "module",
     "description": "",
     "main": "index.html",
     "scripts": {
