--- a/section26/challenge-project/package.json
+++ b/section26/challenge-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.17",
+    "motion": "^11.11.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
