--- a/section26/foodies-project/package.json
+++ b/section26/foodies-project/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.709.0",
     "better-sqlite3": "^11.7.0",
     "next": "14.0.3",
     "react": "^18",
